--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/go,goland,vim
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,goland,vim
+
+# Project-specific files
+bin/*
 
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
